WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266175
[MSE] Fix code spell in internal API
https://bugs.webkit.org/show_bug.cgi?id=266175
Summary
[MSE] Fix code spell in internal API
Philippe Normand
Reported
2023-12-10 02:48:22 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-12-10 03:00:41 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21590
EWS
Comment 2
2023-12-11 01:37:02 PST
Committed
271862@main
(121e1be5d68e): <
https://commits.webkit.org/271862@main
> Reviewed commits have been landed. Closing PR #21590 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-12-11 01:38:14 PST
<
rdar://problem/119484634
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug