[MSE] Fix code spell in internal API https://bugs.webkit.org/show_bug.cgi?id=266175

Reviewed by Xabier Rodriguez-Calvar.

Initialization goes with z, not s.

* Source/WebCore/platform/graphics/SourceBufferPrivate.cpp:
(WebCore::SourceBufferPrivate::didReceiveInitializationSegment):
* Source/WebCore/platform/graphics/SourceBufferPrivate.h:
(WebCore::SourceBufferPrivate::precheckInitializationSegment):
(WebCore::SourceBufferPrivate::processInitializationSegment):
(WebCore::SourceBufferPrivate::precheckInitialisationSegment): Deleted.
(WebCore::SourceBufferPrivate::processInitialisationSegment): Deleted.
* Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.h:
* Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:
(WebCore::SourceBufferPrivateAVFObjC::precheckInitializationSegment):
(WebCore::SourceBufferPrivateAVFObjC::processInitializationSegment):
(WebCore::SourceBufferPrivateAVFObjC::precheckInitialisationSegment): Deleted.
(WebCore::SourceBufferPrivateAVFObjC::processInitialisationSegment): Deleted.
* Source/WebCore/platform/graphics/gstreamer/mse/SourceBufferPrivateGStreamer.cpp:
(WebCore::SourceBufferPrivateGStreamer::precheckInitializationSegment):
(WebCore::SourceBufferPrivateGStreamer::processInitializationSegment):
(WebCore::SourceBufferPrivateGStreamer::precheckInitialisationSegment): Deleted.
(WebCore::SourceBufferPrivateGStreamer::processInitialisationSegment): Deleted.
* Source/WebCore/platform/graphics/gstreamer/mse/SourceBufferPrivateGStreamer.h:

Canonical link: https://commits.webkit.org/271862@main